# Constraint-First-Intelligence

./: 2->3  2.2  README.md  code  exp def  experiementsREADME  experiementshysterisis  experiementsmarkdown  experiementstest  experienentsclassificationloop  exppython  math  phase 1  phase 2  pyproject.toml  python2  text  validation  xmod
.github/workflows/: python.yml2
experiments/model_swap/: test_continuity.py  test_model_swap.py
src/cfi/metrics/: continuity.py  governance.py  stability.py
