[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "constraint-first-intelligence"
version = "0.1.0"
description = "Constraint-first intelligence: alignment as geometric projection"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]